# CSM-SET

./: .gitmodules  .travis.yml  CMakeLists.txt  DeleteyMcDeleteFace  environment.yml
notebooks/: A18111310005_PCAM_L2.isd  Creating a Camera Model Object.ipynb  Generating an ISD - MDIS NAC.ipynb  Generating an ISD - MDIS WAC.ipynb  OREX-CameraModel.ipynb  ORex-ISD.ipynb  isd.isd  out.tif
src/: Set.cpp
tests/: CMakeLists.txt  TestyMcTestFace.cpp
